--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
   
   <h1>Hi, my name is Phil.</h1>
   <img src="./Images/me.jpeg" alt="Phil" style="width: 300px" />
+  <h2 style="padding-top: 30px">About Me</h2>
   <p>
     Hi, I'm Phil. I will figure out some good stuff about me to put here...
   </p>
-  <ul>
-    <li><a href="https://www.facebook.com/phil.stubbs.13" target="_blank" style="text-decoration: none">Facebook</a></li>
-    <li><a href="https://twitter.com/iamPhilStubbs" target="_blank" style="text-decoration: none">Twitter</a></li>
-    <li><a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank" style="text-decoration: none">LinkedIn</a></li>
-    <li><a href="https://www.tiktok.com/@thephilstubbs" target="_blank" style="text-decoration: none">TikTok</a></li>
+  <h2 style="padding-top: 30px">Connect with me</h2>
+  <ul style="list-style-type: none; padding: 0; display: flex; justify-content: space-between; width: 25%">
+    <li style="padding-top: 10px"><a href="https://www.linkedin.com/in/philipjstubbs/" target="_blank" style="text-decoration: none">LinkedIn</a></li>
+    <li style="padding-top: 10px"><a href="https://github.com/philipstubbs13" target="_blank" style="text-decoration: none">GitHub</a></li>
+    <li style="padding-top: 10px"><a href="https://www.facebook.com/phil.stubbs.13" target="_blank" style="text-decoration: none">Facebook</a></li>
+    <li style="padding-top: 10px"><a href="https://twitter.com/iamPhilStubbs" target="_blank" style="text-decoration: none">Twitter</a></li>
   </ul>
+    <h2 style="padding-top: 30px">My Favorite Things</h2>
     <table border="1">
     <thead>
       <tr style="background-color: lightgrey">
@@ -43,7 +46,7 @@
       </tr>
       <tr>
         <td>SQL</td>
-        <td>Run the Race</td>
+        <td>Coach Carter</td>
         <td>read</td>
       </tr>
     </tbody>
